--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,6 +16,7 @@
   <description>Project Credit Challenge</description>
   <properties>
     <java.version>21</java.version>
+    <mapstruct.version>1.5.5.Final</mapstruct.version>
   </properties>
   <dependencies>
     <dependency>
@@ -58,6 +59,11 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct</artifactId>
+      <version>${mapstruct.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
@@ -82,8 +88,18 @@
         <configuration>
           <annotationProcessorPaths>
             <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${mapstruct.version}</version>
+            </path>
+            <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
+            </path>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok-mapstruct-binding</artifactId>
+              <version>0.2.0</version>
             </path>
           </annotationProcessorPaths>
         </configuration>
