feat: adiciona consultas de créditos por NFS-e e número do crédito com suporte a Kafka

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,5 +14,12 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     open-in-view: false
+  kafka:
+    bootstrap-servers: ${KAFKA_HOST:localhost:9092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      properties:
+        spring.json.add.type.headers: false
 app:
   credito-topic: "topico-creditos"
