feat: adiciona configuração do Docker e atualiza application.yml com novas propriedades de gerenciamento

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -31,3 +31,20 @@ spring:
       missing-topics-fatal: false
 app:
   credito-topic: "topico-creditos"
+server:
+  shutdown: graceful
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,prometheus
+  endpoint:
+    prometheus:
+      access: unrestricted
+    health:
+      show-details: always
+  metrics:
+    tags:
+      application: ${spring.application.name}
+    enable:
+      all: true
